    - Only change the reply to a vote to "OK" if it's not already set.  This
      gets rid of annoying "400 OK" log messages, which may have been masking
      some deeper issue.  Bugfix on 0.2.0.7-alpha.
    - When we get a valid consensus, recompute the voting schedule.
    - Base the valid-after time of a vote on the consensus voting schedule,
      not on our preferred schedule.

  o Minor bugfixes (performance):
    - Use a slightly simpler string hashing algorithm (copying Python's
      instead of Java's) and optimize our digest hashing algorithm to take
      advantage of 64-bit platforms and to remove some possibly-costly
      voodoo.

  o Code simplifications and refactoring:
    - Make a bunch of functions static.  Remove some dead code.
    - Pull out about a third of the really big routerlist.c; put it in a
      new module, networkstatus.c.
    - Merge the extra fields in local_routerstatus_t back into
      routerstatus_t: we used to need one routerstatus_t for each
      authority's opinion, plus a local_routerstatus_t for the locally
      computed consensus opinion.  To save space, we put the locally
      modified fields into local_routerstatus_t, and only the common stuff
      into routerstatus_t.  But once v3 directories are in use, clients and
      caches will no longer need to hold authority opinions; thus, the
      rationale for keeping the types separate is now gone.
    - Make the code used to reschedule and reattempt downloads more uniform.
    - Turn all 'Are we a directory?' logic into a call to dirserver_mode().


Changes in version 0.2.0.7-alpha - 2007-09-21
  o New directory authorities:
    - Set up moria1 and tor26 as the first v3 directory authorities. See
      doc/spec/dir-spec.txt for details on the new directory design.

  o Major bugfixes (crashes):
    - Fix possible segfaults in functions called from
      rend_process_relay_cell(). Bugfix on 0.1.2.x.

  o Major bugfixes (bridges):